--- a/app/src/main/res/layout/log_fragment_view.xml
+++ b/app/src/main/res/layout/log_fragment_view.xml
@@ -13,7 +13,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp"
-        android:text="Bluetooth Serial"
+        android:text="Bluetooth Serial Logging"
         android:textSize="18sp"
         android:textStyle="bold" />
 
