--- a/app/src/main/res/layout/chart_fragment_view.xml
+++ b/app/src/main/res/layout/chart_fragment_view.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     >
@@ -10,7 +11,17 @@
         android:id="@+id/any_chart_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp">
+
+        <ImageButton
+            android:id="@+id/refreshButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:onClick="onRefreshButtonClicked"
+            app:srcCompat="@android:drawable/stat_notify_sync" />
+    </com.anychart.AnyChartView>
 
     <ProgressBar
         android:id="@+id/progress_bar"
