--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -80,7 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="30dp"
-            android:text="Copyright ⓒ 2018 Berylsoftlab and KDtech"
+            android:text="Copyright ⓒ 2019 Berylsoftlab and KASL"
             android:textAlignment="center"
             android:textColor="@android:color/white"
             android:textSize="10sp" />
